Prevent contributor list from wrapping inside a contributor link

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1422,6 +1422,7 @@ div#logScope a.moreLogs{
 #contributors ol li {
     list-style-type:none;
     display:inline;
+    white-space: nowrap;
 }
 
 #contributors ol li:after {
